--- a/frontend/src/components/RecognitionResult.css
+++ b/frontend/src/components/RecognitionResult.css
@@ -38,4 +38,5 @@
     width: 10em;
     padding: 1rem;
     font-size: 1rem;
+    width: 100%;
 }
